--- a/client/components/css/Profile.module.css
+++ b/client/components/css/Profile.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  overflow-x: hidden;
 }
 
 .profileMasterCont {
